Revision history for JSON-Schema-Modern

{{$NEXT}}

0.608     2025-04-11 20:57:16Z
          - documentation now makes a note of the special licence for JSON
            Schema schema files
          - documentation fixes for JSM and JSM::Document regarding handling
            of uris
          - introduction of 'original_uri' for JSON::Schema::Modern::Document,
            which document subclasses may wish to use for logic of their own
            after changing the canonical uri of the document

0.607     2025-04-01 19:35:50Z
          - now performing stricter email address validation for the 'email' and
            'idn-email' formats
          - some improvements to the handling of unimplemented formats (only
            missing core formats are checked for at traverse time; custom
            formats can be added at any time and errors can be avoided with
            'short-circuit')

0.606     2025-03-23 00:16:35Z
          - bump required version for optional module Data::Validate::Domain
            (used by the 'hostname' and 'idn-hostname' formats)

0.605     2025-03-09 16:31:05Z
          - update 'hostname' and 'idn-hostname' format validation to be more
            lax with respect to domain names; fixes some acceptance tests

0.604     2025-03-08 23:23:05Z
          - mark some failing format tests as todo that will be added in
            Test::JSON::Schema::Acceptance 1.028

0.603     2025-02-28 23:35:43Z
          - fix Sereal serialization hooks
          - various performance improvements when dealing with base URIs

0.602     2025-02-21 00:11:32Z
          - more checks at traverse and evaluation time for inconsistent
            results
          - fix Sereal deserialization hooks

0.601     2025-02-02 00:23:38Z
          - check for builtin::Backport at install time

0.600     2025-01-31 23:23:21Z
          BREAKING CHANGES: OpenAPI::Modern must be updated to 0.079 after
          installing this version.